flux/apps/animeworld-sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: animeworld
  name: animeworld
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://animeworld.multimedia-factory.svc:5000"
    uptime-kuma.io/name: "animeworld"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Arr Stack"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animeworld
  template:
    metadata:
      labels:
        app: animeworld
    spec:
      containers:
        - name: animeworld
          image: ghcr.io/mainkronos/anime_downloader:latest
          imagePullPolicy: Always
          # command: ["/bin/sh", "-c"]
          # ports:
          #   - containerPort: 5000
          volumeMounts:
            - mountPath: /src/database
              subPath: database
              name: animeworld-database
            - mountPath: /src/script
              subPath: script
              name: animeworld-script
            - mountPath: /data
              name: animeworld-data
            - mountPath: /downloads
              name: animeworld-downloads
      volumes:
        - name: animeworld-database
          persistentVolumeClaim:
            claimName: animeworld-database
        - name: animeworld-script
          persistentVolumeClaim:
            claimName: animeworld-script
        - name: animeworld-data
          persistentVolumeClaim:
            claimName: animeworld-data
        - name: animeworld-downloads
          persistentVolumeClaim:
            claimName: animeworld-downloads
